<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/s_home" />

        <item
            android:id="@+id/wishlist"
            android:icon="@drawable/liked_icon"
            android:title="@string/s_wishlist" />


    </group>

    <item android:title="@string/s_profile">
        <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/ic_baseline_person_24"
                        android:title="@string/s_profile" />

                    <item
                        android:id="@+id/nav_login"
                        android:icon="@drawable/ic_baseline_login_24"
                        android:title="@string/s_login" />

                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_baseline_power_settings_new_24"
                        android:title="@string/s_logout" />

                </group>

        </menu>
    </item>

    <item android:title="@string/s_share">
        <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/nav_share"
                        android:icon="@drawable/ic_baseline_share_24"
                        android:title="@string/s_share" />

                    <item
                        android:id="@+id/nav_rate"
                        android:icon="@drawable/ic_baseline_rate_review_24"
                        android:title="@string/s_rating" />

                    <item
                        android:id="@+id/nav_help"
                        android:icon="@drawable/about_icon"
                        android:title="Help" />

                </group>

        </menu>
    </item>


</menu >