<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_brown"
    tools:context=".fragments.profile_screen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:paddingLeft="20dp"
            android:transitionName="logo_image"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="CookBook"
            android:textColor="#6A4239"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/s_slogan_name"
            android:textColor="#6A4239" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/profile_pic_icon"></ImageView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/baloo"
                    android:text="- - - - - - -   - - - - -"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/baloo"
                    android:text="- - - - - - - - - - - -@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/enter_login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"
                        android:visibility="visible">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                                    android:id="@+id/help_about_Button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start"
                                    android:layout_marginLeft="35dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="15dp"
                                    android:backgroundTint="#FFFFFF"
                                    android:text="About"
                                    android:textAlignment="center"
                                    android:textAllCaps="false"
                                    android:textStyle="bold"
                                    android:visibility="visible"
                                    tools:ignore="RtlCompat" />

                                <TextView
                                    android:id="@+id/help_page_aboutText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="20dp"
                                    android:fontFamily="@font/athiti_medium"
                                    android:singleLine="false"
                                    android:layout_marginLeft="35dp"
                                    android:text="@string/about_text"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:visibility="gone" />


                                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                                    android:id="@+id/help_app_info_Button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start"
                                    android:layout_marginLeft="35dp"
                                    android:layout_marginBottom="15dp"
                                    android:backgroundTint="#FFFFFF"
                                    android:text="App info"
                                    android:textAlignment="center"
                                    tools:ignore="RtlCompat"
                                    android:textAllCaps="false"
                                    android:textStyle="bold" />


                            </LinearLayout>


                            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                                android:id="@+id/profile_Logout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginLeft="35dp"
                                android:layout_marginBottom="15dp"
                                android:backgroundTint="#FFFBF7CD"
                                android:text="Logout"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textStyle="bold"
                                tools:ignore="RtlCompat" />

                            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                                android:id="@+id/profile_Login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginLeft="35dp"
                                android:layout_marginBottom="15dp"
                                android:backgroundTint="#FBF7CD"
                                android:text="Login"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textStyle="bold"
                                tools:ignore="RtlCompat" />

                            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                                android:id="@+id/help_contact_Button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginLeft="35dp"
                                android:layout_marginBottom="10dp"
                                android:backgroundTint="#FFFFFF"
                                android:text="Contact us"
                                android:textAlignment="center"
                                tools:ignore="RtlCompat"
                                android:textAllCaps="false"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/help_page_contactText"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="35dp"
                                android:layout_marginBottom="3dp"
                                android:fontFamily="@font/athiti_semibold"
                                android:text="@string/contact_text"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/help_page_contactText3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="35dp"
                                android:layout_marginBottom="100dp"
                                android:fontFamily="@font/athiti_semibold"
                                android:onClick="go_to_webView"
                                android:text="• Terms and Privacy Policy"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:visibility="invisible" />


                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>